--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Mahout"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Microsoft"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Weka"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
